scaffolder-templates/springboot-rest-template/skeleton/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}
  namespace: ${NAMESPACE}
  labels:
    backstage.io/kubernetes-id: "${CI_PROJECT_NAME}"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ${APP_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP}
                port:
                  number: 8080
